# nivalis

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  design-qa.md  memory-report.md  package-lock.json  package.json
.github/workflows/: ci.yml
.husky/: pre-merge-commit  pre-push
benchmarks/: Cargo.toml
benchmarks/benches/: imap_protocol.rs  local_store.rs
docs/: architecture.md  performance.md  remote-sync-contract.md  roadmap.md
docs/measurements/: 2026-07-19-0d3453c.csv  2026-07-19-456ad2f.csv  2026-07-19-8c005c8.csv  2026-07-19-a74b8bb.csv  2026-07-19-d19cec5-idle.csv  2026-07-19-d19cec5-resize.csv  2026-07-19-d19cec5-soak.csv  2026-07-19-d19cec5-stress-extended.csv  2026-07-19-d19cec5-stress.csv  2026-07-19-d19cec5.csv  2026-07-20-24d616f.csv  2026-07-20-528c2b4.csv  2026-07-20-9f0fd17.csv  2026-07-20-b852f10.csv  2026-07-20-d5a6c43.csv
migrations/: 0001_init.sql  0002_mail_mutations.sql  0003_file_reference_indexes.sql  0004_mutation_guards.sql  0005_clean_stale_file_gc.sql  0006_account_mailbox_stats.sql  0007_remote_change_journal.sql  0008_remote_lease_reservations.sql  0009_message_search.sql  0010_content_file_lifecycle.sql  0011_account_configuration.sql  0012_drafts_outbox.sql  0013_repair_draft_stats.sql  0014_inbox_history_backfill.sql  0015_full_text_body_search.sql  0016_restore_inbox_previews.sql  0017_layered_message_fetch.sql  0018_repair_preview_sync_cursor.sql  0019_remote_inbox_totals.sql
scripts/: check-local.sh  measure-memory.sh  seed-memory-fixture.sh
scripts/fixtures/: memory.sql
src/: benchmark.rs  content.rs  controller.rs  credentials.rs  main.rs  platform.rs  presentation.rs  store.rs  ui_identity.rs
src/controller/: session.rs
src/core/: account.rs  compose.rs  message.rs  mod.rs  outbound.rs  outbox_driver.rs  runtime.rs  scheduler.rs  sync.rs
src/network/: imap.rs  mod.rs  smtp.rs
src/network/imap/: fast.rs
src/presentation/: sqlite.rs
src/store/: memory.rs  mod.rs  path.rs
src/store/sqlite/: account.rs  actor.rs  content.rs  domain.rs  draft.rs  file_gc.rs  journal.rs  migrations.rs  mod.rs  mutation.rs  outbox.rs  query.rs  remote.rs  search.rs  stats.rs  sync.rs
src/store/sqlite/remote/: report.rs
src/store/sqlite/remote/report/: tests.rs
tests/: imap_literal_bound.rs  reader_rendering.rs  window_input_recovery.rs
ui/: actions.slint  app.slint  components.slint  composer.slint  mailbox.slint  models.slint  outbox.slint  overlays.slint  reader.slint  shared.slint  shell.slint  states.slint  theme.slint
ui/components/: controls.slint  feedback.slint  inputs.slint  navigation.slint  primitives.slint
