[package]
name = "nivalis-mail"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A focused desktop mail client built with Rust, Slint, and Skia"
license = "GPL-3.0-only"
build = "build.rs"

[features]
default = []
bench-harness = []

[dependencies]
crossbeam-channel = { version = "=0.5.16", default-features = false, features = ["std"] }
rusqlite = { version = "=0.40.1", default-features = false, features = [
    "bundled",
    "limits",
] }
slint = { version = "=1.17.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "accessibility",
    "unstable-winit-030",
    "compat-1-2",
] }
tokio = { version = "=1.52.3", default-features = false, features = [
    "rt",
    "sync",
    "time",
] }

[build-dependencies]
slint-build = "=1.17.1"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.performance]
inherits = "release"
opt-level = 3

[profile.release-size]
inherits = "release"
opt-level = "z"
