[package]
name = "nivalis-mail"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "A focused desktop mail client built with Rust, Slint, and Skia"
license = "GPL-3.0-only"
build = "build.rs"

[features]
default = []
bench-harness = []

[dependencies]
async-imap = { version = "=0.11.3", default-features = false, features = ["runtime-tokio"] }
crossbeam-channel = { version = "=0.5.16", default-features = false, features = ["std"] }
getrandom = { version = "=0.4.3", default-features = false }
keyring-core = { version = "=1.0.0", default-features = false }
lettre = { version = "=0.11.22", default-features = false, features = [
    "smtp-transport",
    "tokio1",
    "tokio1-rustls",
    "ring",
    "rustls-platform-verifier",
] }
mail-parser = { version = "=0.11.5", default-features = false, features = ["full_encoding"] }
rusqlite = { version = "=0.40.1", default-features = false, features = [
    "bundled",
    "hooks",
    "limits",
] }
rustls = { version = "=0.23.42", default-features = false, features = ["std", "ring", "tls12"] }
rustls-platform-verifier = { version = "=0.7.0", default-features = false }
slint = { version = "=1.17.1", default-features = false, features = [
    "std",
    "backend-winit",
    "renderer-skia",
    "accessibility",
    "unstable-winit-030",
    "compat-1-2",
] }
tokio = { version = "=1.52.3", default-features = false, features = [
    "rt",
    "io-util",
    "net",
    "sync",
    "time",
] }
tokio-rustls = { version = "=0.26.4", default-features = false, features = ["ring", "tls12"] }
zeroize = { version = "=1.9.0", default-features = false, features = ["alloc"] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus-secret-service-keyring-store = { version = "=1.0.0", default-features = false, features = ["crypto-rust"] }

[dev-dependencies]
i-slint-backend-testing = { version = "=1.17.1", default-features = false, features = ["renderer-skia"] }
rcgen = { version = "=0.14.8", default-features = false, features = ["crypto", "ring"] }

[build-dependencies]
slint-build = "=1.17.1"

[patch.crates-io]
imap-proto = { path = "vendor/imap-proto" }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.performance]
inherits = "release"
opt-level = 3

[profile.release-size]
inherits = "release"
opt-level = "z"
